# NN-JEPA

./: .gitignore  HANDOFF.md  LICENSE  MEMORY.md  README.md  pyproject.toml
configs/hydra/: config.yaml
doc/: bao_cao_drive_jepa_predictor_2601_22032.md  bao_cao_flatten_token_vs_4d_vjepa_ac.md  bao_cao_jepa_update_20260609_inference.md  bao_cao_kha_nang_dung_predictor_ac_official.md  bao_cao_metric_danh_gia_val_rollout_identity.md  bao_cao_official_lite_vs_meta_vjepa2_ac.md  bao_cao_oom_eval_val_vs_train_batch.md  bao_cao_ra_soat_data_pipeline_vs_jepa_2026_06_06.md  bao_cao_so_sanh_feature_cache_nn_jepa_va_jepa.md  bao_cao_so_sanh_jepa_ban_ban_vs_nn_jepa_on_dinh_train.md  bao_cao_so_sanh_jepa_moi_vs_nn_jepa_data_pipeline_train_vjepa21_ac.md  bao_cao_trien_khai_experiment_servo_cu.md  bao_cao_trien_khai_official_lite_predictor.md  bao_cao_trien_khai_temporal_spacing_vjepa2.md  bao_cao_vjepa2_ac_vs_nn_jepa.md  chien_luoc_thu_data_xe_tu_lai_rc.md  data_pipeline_current_code.md  full_audit_report_20260608.md  giai_thich_source_nn_jepa_chi_tiet.md  huong_dan_extract_feature_fp16_va_reuse_cache.md  huong_dan_hydra_train_feature_cache.md  hydra_implementation_report_20260608.md  jepa_update_20260608_hydra.md  ke_hoach_inference_an_toan_nn_jepa.md  so_do_drive_jepa_pipeline.md
notebooks/: colab_finetune_encoder_online_predictor.ipynb
results/: action_sensitivity_old_base_val.json
src/data/: __init__.py  dataset.py  feature_sequence_dataset.py  (+5 more)
tests/: test_hydra_train_config.py  test_pipeline_simple.py  test_planning_plot.py  test_rc_jepa_ac.py  test_session_web_viewer.py
(+43 files in other folders)
