[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-jepa"
version = "0.1.0"
description = "Data pipeline for JEPA-based toy car control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "torch>=2.2",
  "timm>=1.0",
  "einops>=0.8",
  "tqdm>=4.66",
  "wandb>=0.17",
  "hydra-core>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
